# ChangeLog for dev-python/prettytable
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/ChangeLog,v 1.15 2015/04/08 08:05:25 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> prettytable-0.6-r1.ebuild,
  prettytable-0.7.1-r1.ebuild, prettytable-0.7.1.ebuild:
  Drop old Python implementations

  20 Feb 2015; Pacho Ramos <pacho@gentoo.org> prettytable-0.7.1-r1.ebuild:
  x86 stable, bug #540512

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> prettytable-0.7.1-r1.ebuild:
  Stable for amd64, wrt bug #540512

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> prettytable-0.7.1-r1.ebuild:
  Support python 3.4

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  prettytable-0.7.1-r1.ebuild:
  Keyword amd64-linux and x86-linux

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> prettytable-0.7.1.ebuild:
  Stable for x86, wrt bug #495600

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> prettytable-0.7.1.ebuild:
  amd64 stable, bug #495600

  13 Feb 2014; Jason A. Donenfeld <zx2c4@gentoo.org> metadata.xml:
  I am no longer maintaining this package.

*prettytable-0.7.1-r1 (18 Jan 2014)

  18 Jan 2014; Ian Delaney <idella4@gentoo.org> +prettytable-0.7.1-r1.ebuild,
  metadata.xml:
  Add openstack herd. revbump; add py3 support

  16 Dec 2013; Ian Delaney <idella4@gentoo.org> prettytable-0.7.1.ebuild:
  minor touch up, missed on last inspection

  13 Oct 2013; Pacho Ramos <pacho@gentoo.org> prettytable-0.6-r1.ebuild:
  Also compatible with python3_3

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> prettytable-0.7.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*prettytable-0.6-r1 (21 Mar 2013)

  21 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  +prettytable-0.6-r1.ebuild:
  updating prettytable-0.6 to r1 for distutils-r1 support

*prettytable-0.7.1 (11 Mar 2013)

  11 Mar 2013; Matthew Thode <prometheanfire@gentoo.org>
  +prettytable-0.7.1.ebuild: