@@ -1,30 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
-DIST prettytable-0.6.tar.gz 19663 SHA256 6414f9f5ddba04fcca39f09a9852ec3585b92b67e9319ea865671044d3ed2299 SHA512 ebf53f86ebaaa0c9436808530409bf30069b4722d5dac4c891bd6a9953c3ef1afb3d3f0b494bd4b7b474c98c2e0532c73123fb71827d4b3a5bbb497d32d30af4 WHIRLPOOL 1f932621d100ec67f1764e05164658f80d9328e3e3e770d1a46acdee0e7e35c4c71194f2473439e37a5f6c9d59a5e27f625cf3d38731a648a3b5225b2610d3a3
-DIST prettytable-0.7.1.tar.gz 24448 SHA256 686bda277474e5cc3cff02596d72c2d6f171170225af3dedffe78cbf958c6348 SHA512 5389f3c31cb7482f6796c7f369fc9ef79e2029c783e33c0845dd28a1a6394e66395a1d452072ed89aeb2c38705b8f631a20d093b1bd817c3175e32367f552147 WHIRLPOOL daf155240cd35ce87ac333211a234edee0bf2960bf7bf7ad240d566a803f958b9ada977bbd3a51e85006e333565a950c4070e94290ec7e7bc45f8ccbb63328b7
-EBUILD prettytable-0.6-r1.ebuild 637 SHA256 792eda1254952c233e0925fddb9373f4b09a1115849b82f4c33bb50456ca040d SHA512 372031474ce3f5bec8ae7fb6bd1929fb3edd4c6d647685d7f9c52de5017c00a84080ed73076af266b9a0dc37d24ab5234c2f5a4172bff9204032dfaab06925ed WHIRLPOOL 764ee445121ae1e531688cd0b3a1f6a463ba3f2dd113b8cffa5851017ea7b53222d49f0410e5218341c5b04f8bd2f1c11e8d3f9d7e606b3d20e4739a2226c047
-EBUILD prettytable-0.6.ebuild 653 SHA256 47b6a4b61f1c5d228c77a646590129c7db4252d063634f837b988b48188c89ba SHA512 dd5dab9af204495954bf906ba479eabd83a7bdc53d58035547960ece1fab1d43a797c397d514e3484df43d5ddf9ceb422ffb89d40ed2b81c654f6f6942b2dec3 WHIRLPOOL eaa33f1604c8b797c71a4e0ea086033bacec7980faa729ef715035b31277fb2caa2f162567a92c835e73766a21e7e81b0052b376c2d6c0edceb44c2333e7913b
-EBUILD prettytable-0.7.1-r1.ebuild 751 SHA256 e5178d6f47e97ce4ec208803b8461cabc0e43c51409fba6268c30759e260c689 SHA512 ff75a9e322414c4e76b3ed6fe20a1920c33f30322ed6d287072632d869b7f8aeddaf9140535f1bd2598df41cd127510dfc57afda43cca798d950248362474329 WHIRLPOOL de259958b907f0be8301c501ce6f2206226fd6edffcef3adbbdafb85b5b382a2ae8b72f1f0f9b4e531cfcb5fcb92a0bc0395c256b426c22adb464c6ed35ee36f
-EBUILD prettytable-0.7.1.ebuild 682 SHA256 5aa6587aa8013eacf1e5be8d5f54ca76060284be1465655ef5d51ded66c81f1c SHA512 e1f12b3db6aa19a65bb5a2b9d4708ba3566a62049862b27cfd7289df8c2f91e3e14a2f22fd8ba02f64182b357a84d0432da2664401c8f9755ac555f182c10a5b WHIRLPOOL 6626a67080325afdab15abe5444260fee947b782c85b32f3eaf2aa615298fa7df5e4d4821c4ec8472091c2b43a74e3a6a9b7344c50ea1ed8d7978f8ed1e8d9fa
-MISC ChangeLog 2262 SHA256 0fb2b5b2c5e039e26779deea53b291a8c20ebccea35e8a15c02ac24de9b454ba SHA512 4d118f0382dd88ed9d5a4c4d02af43600da3ff330bc4150a1a93c3fe48abd41d18f36ded254d5ccd9f063e8638eafd189db3e7b96d37812e699719419eb2a2a9 WHIRLPOOL 4dbcf7df9c3d563e6963019c2241ad99c0873164dd7b3141a6a3bc3b1781f5f0006c71cd5276e9af906f687541529f638ecbb2b21547712dbd22486b8d8cb7e1
-MISC metadata.xml 244 SHA256 3f4c0e3b85d15702bd117c7b31094d5d7eaf794ebe9ff9d3a6162e93de4154e7 SHA512 884d8baff64ca386218c046d3caeb87acba2173fcf832e95eefacfb3e266912471dff5e21fbc7b998375334793410f171dc31410c8ad9d939de6eee08dc0e263 WHIRLPOOL 9c2fd5835f08b70b22677ac0171a5e4c4850a8c87c0d9f39e5e6f07d6e2fee9b13d0142b5bc9d3e42a8941f5bb39ef5424bbccde27e09e7df9791da845bab28a
+DIST prettytable-0.7.1.tar.bz2 21499 SHA256 599bc5b4b9602e28294cf795733c889c26dd934aa7e0ee9cff9b905d4fbad188 SHA512 1a7aa604f608483b107401ddca9721ddea673ea1415d2a514948f7399835784e0a9025f0e5236f4109890e5924da345bd111893200730501b496c136465c204f WHIRLPOOL cbde4e7053eb82749a21f1ac7e0a9ab7368f9dfbe64f0e434da085dc30f24931110e87c508c500bb340adec6d928dae53f1652d1601a5718311a9e414a2b789c
+DIST prettytable-0.7.2.tar.bz2 21755 SHA256 853c116513625c738dc3ce1aee148b5b5757a86727e67eff6502c7ca59d43c36 SHA512 f3a3fe6fa29f4ef090ff6cac06549ebd9db8b387e7b25fc64c4e37c8444586f50355c5573f38caabc72360aa68054aa189a67aa37f0bd13b872862ecd9151e71 WHIRLPOOL 1b27332ea8b2c83ec13b981508f429881bacacb87ac4a8c51a42b6071daa6d1278a48f3359547efae2c7f9eb1fe5d6b13e2d4232543722aa3aab1f30f9fccfbe
+EBUILD prettytable-0.7.1-r1.ebuild 726 SHA256 d9b1d04b91cc3383a13b5c6dda4e1bb6e837eb291876e47c9675f5eaf7770fbe SHA512 da0b9533cf1070ef2973b8bfe335c8c05f16bd04ab5975f591100cf88ccd4d642d953eba1fcd351e6f09ade2c3caefa2a0f4ccd15a057b81aab5125ee62bfb51 WHIRLPOOL 6fd6f84f40d97d9b2d5d60aa1b0de0558bf587bfdec8156738d699bb62ef803fb1a1b8620e233d1506f635048fd3b086544b7b5341ea3086b0fa19ffc8691d9e
+EBUILD prettytable-0.7.2.ebuild 725 SHA256 11c2033b38785489e36360e6e26ade9affb0b58a16d579ef42f3ed2651e0962e SHA512 2c818a65c9c35638bab48739bb99dba8fa258ebda265b8be9fb43dbe1d6799986fdddf1f7fca647710d2e74be2864f69de22ecda72650c98f51fbe20cf56fd35 WHIRLPOOL caaf950df3256144581ffc1bd23e21db85e9085cde950e89f6abe26b6eb0cb3483a64c8c22083b43311dc6982674c76db17a352129beb9d2b569164b61ad0071
+MISC ChangeLog 2521 SHA256 b9e3c5fdc59486ec544bc2e8ff4d130db30e07506992ddc91918af496d19f16b SHA512 9ec7d58e074ddccb4c7bed9f9c90ca11c2b09d32c89b1875f43a8ff80c67804a26513bef4e751ab7fbefd97a21c915b29cac48dd6b2ef95ab1939d09c4e0fffc WHIRLPOOL ae256228647411a34390172b3a0a99ba0c0ec9d1f82206b84f21e918d2456144a4e3a250cf18b2e223dcdf40b9ea179c4c1723bd25706ba1a7578f4f415c1e30
+MISC metadata.xml 249 SHA256 7698fb0e22ace1bc51f5faa31d8faa5d58b31298784d34bba31b1d0a9eef0fd4 SHA512 f92d31c5fee0c2d9b73f4781a7ba079653994edeac249efcda414f5c43be3fb65275179d4c126a8bead8b41c1adc4782ea44a7d7608542dc49c8f6f7f73796d3 WHIRLPOOL 439f3e201f9b77f5c230fb0f0ab7111e95bf58e77ccd6d8da9c4ceb0ebb47a0f5efe760c8b92fde28331be97239b55ff6c8d8fbdacdd28591f255fe7e0964961
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVJOKAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOWnMQALOrOWXameZvyGl9RynPhLZk
-ujJq1hH7rslBgtfIy+vfHAZRL5saWws/rL8L+hAa5F7kiLkc7fk03iH8jBWYAPM0
-iIXknVTRZVuOdwKocT5fyXGmy3ySRkkoM9wldLXAL79dI10AJg3/LBcl0ZqAhHpS
-oBRB3/XHyTWuoRR6MFvNEU5ZhZxwdl/aTZMCWlFIyeYyDjZaLJ4dEqDafk0EyOxE
-eNrSzNwo308gp9x9whOiOvO61MhUVBPUZ8OANFokvx2/qEfjqkV9uKC3IpmjZR2M
-JKMr2bGQJ3H2zvvctMZ41rZzcvkctpeeMmv9wxSJZWB1nPANTiOPOnxmgyNIS7mX
-CZBa4dkypDVtK5w1mOJxiQkEyP0uX2p1hHdydCeKAX9lPj4k0umCC5Xt1n+QWgXg
-t+bK9hAQu1zq9rxQVz1FSqWtSBsarELOAGGWdOIxMiq6UVEtxnY2tX6WWwfYUZI3
-qp5RrR5/gdS1rtTdiyd1TM0+RiUIZESWS0Qa14qMw5EadB1t+h0EF/gqyi5gFyF8
-4hXPyxdecqBZzdjm5AOp7heT8GUXB9VzrzZsN19PsQLOv7kyXJ8g8EuUUblGB5uA
-5RsJ+/dd4WXSkY+ThnHZOdrQEDcDin5ycjdNGYjIJN2xXKyptraN3Yu68F3mkbAX
-3MMiGqd5cj0DP8REEdOP
-=ls5L
+iQJ8BAEBCgBmBQJVZEdZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmig4IP/19BjC8/deKGNLzw3Uv4LCQi
+JE1esuNOyU5utmxsv9iO2J7roCyIRevgKPGRoPXAb2ROmXsQH2Dh9Ftt8OOkYXwa
+5ZBICQqh7YUOEPxea0lkW7HmCyPx4XQibJ5i6VJa3/n6RZIIjIxYk8rWWTO6mUow
+4o1ZF1Ek4m1XWcLK2R4lslhOoLQsFCGe9GxhT6JZk30L2sZeCxcCs9nbJ3czpK/S
+ZpgPSuSzNaxkaDJ+qTe4a4biKTNYwLr8SYoXyIdpPGyGW4sL+Phdb6KPzuWqGn55
+eOoZsO+PFa4r7wqX449GWAM8/01nOUx3XrXoATxkcTcCEHK6tgdc++teLSM1pYeO
+nhZzxocZ1BK/x+hiftBTwfXiMQ2ozF/F9B0PcDDAKmNRgFF1E9ZnBScjthZ26igc
+w5qj8C5E+ffmUPe07TCXdATXB8XqYB2IqiMmQ/uEDesTetVs47YDaxDixh6vY8V5
+PBxPqV+NYMjwchtfIu9JH3gp2KkM1AV7h2npaVTuurk8VWvaadHPAI2NKCDrzJu/
+g0xUcMqreU+u6SsrGkhCWBzv2qZiky0B3YBf2AYLwrTqDnBZxyQdHVr2S9V0bw1z
+wH46fhVFvnOzILtJC7srbjaxqSnueCkUJRtoxxCSWVKyoK3BqXaQM1axBxxDPPI3
+p9b/jlWTE2KB41xti+mm
+=exoK
 -----END PGP SIGNATURE-----
