@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/prettytable-0.7.1-r1.ebuild,v 1.7 2015/05/26 10:13:44 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/prettytable-0.7.2.ebuild,v 1.1 2015/05/26 10:13:44 jlec Exp $
 
 EAPI=5
 
@@ -14,7 +14,7 @@ SRC_URI="mirror://pypi/P/PrettyTable/${P}.tar.bz2"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="amd64 x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE="test"
 
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
