@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/prettytable
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/ChangeLog,v 1.15 2015/04/08 08:05:25 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/prettytable/ChangeLog,v 1.16 2015/05/26 10:13:44 jlec Exp $
+
+*prettytable-0.7.2 (26 May 2015)
+
+  26 May 2015; Justin Lecher <jlec@gentoo.org> +prettytable-0.7.2.ebuild,
+  -prettytable-0.6-r1.ebuild, -prettytable-0.6.ebuild,
+  -prettytable-0.7.1.ebuild, metadata.xml, prettytable-0.7.1-r1.ebuild:
+  Version Bump; drop old
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> prettytable-0.6-r1.ebuild,
   prettytable-0.7.1-r1.ebuild, prettytable-0.7.1.ebuild:
